# essentials

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
essentials/: app.py
tests/: test_basic.py
