[tool.poetry]
name = "essentials"
version = "0.1.0"
description = ""
authors = ["abhishek <abhisheksara21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pylint = "^3.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
tox = "^4.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
